# rustexercises

./: README.md
bigxmltojson/bigxmldiff/: Cargo.toml  README.md
bigxmltojson/bigxmldiff/src/: chunkindex.rs  config.rs  json.rs  lib.rs
circular-buffer-metrics/: Cargo.toml  charts.yml
circular-buffer-metrics/src/: config.rs  lib.rs  main.rs  prometheus.rs
go_kit/: Cargo.toml  README.md
go_kit/src/: json.rs  jsonrpc.rs  lib.rs  request_response.rs
ocw601sc/: README.md
ocw601sc/Session1.3.1/: Cargo.toml
ocw601sc/Session1.3.1/src/: lib.rs
ocw601sc/Session1.3.4/: Cargo.toml
ocw601sc/Session1.3.4/src/: lib.rs
ocw601sc/Session1.3.5/src/: lib.rs
ocw601sc/Session1.3.5/tests/: polynomials.rs
ocw601sc/Session1.4/: Cargo.toml
ocw601sc/Session1.4/src/: lib.rs
ocw601sc/Session1.4/tests/: extract_tags.rs  fruit_salad.rs  is_palindrome.rs  is_substring.rs  warehouse.rs
ocw601sc/Session2/basic/: Cargo.toml
ocw601sc/Session2/basic/src/: abc.rs  average2.rs  (+12 more)
ocw601sc/Session2/state_machine/: Cargo.toml  README.md
ocw601sc/Wk131/src/: lib-enum.rs  lib.rs  main.rs
ocw601sc/Wk134/src/: main.rs
ocw601sc/Wk135/: Cargo.toml
ocw601sc/Wk135/src/: lib.rs  main.rs
ocw601sc/Wk14/src/: lib.rs  main.rs
ocw601sc/Wk148/src/: lib.rs  main.rs
ocw601sc/Wk148/tests/: ispalindrome.rs
sm_gist/src/: feedback.rs  feedback2.rs  lib.rs
steghide/: Cargo.toml
steghide/cpp_equivs/: bit_string_shifts.cpp
steghide/src/: README.md  binary_io.rs  bit_string.rs  cli.rs  cli.yml  embed_utils.rs  embedder.rs  encryption_algorithm.rs  encryption_mode.rs  lib.rs  main.rs
(+25 files in other folders)
