[package]
name = "go_kit"
version = "0.1.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2018"

[dependencies]
rocket_contrib = "0.3.17"
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0.80"
# Support for #[derive(Serialize, Deserialize)]. 
serde_derive = "1.0.80"
serde_json = "1.0.33"
